--- a/views/admin/orderProductDetail.ejs
+++ b/views/admin/orderProductDetail.ejs
@@ -550,7 +550,7 @@
     <div class="order-container">
         <div class="order-header">
             <div class="order-details">
-                <p>Order Id: <span class="order-id"><%= order._id %></span></p>
+                <p>Order Id: <span class="order-id"><%= order.orderId %></span></p>
                 <p>Order Date: <span><%= order.createdAt %></span></p>
             </div>
         </div>
