--- a/views/user/banned.ejs
+++ b/views/user/banned.ejs
@@ -121,12 +121,12 @@
             <p id="suspension-reason">Violation of Community Guidelines</p>
         </div>
         
-        <p>If you believe this is a mistake, you can submit an appeal.</p>
+      
         
-        <button class="appeal-btn" onclick="showAppealForm()">Appeal Suspension</button>
+       <p>Return to login</p> <button class="appeal-btn" onclick="window.location.href='/login'">Login</button>
         
         <div class="contact-info">
-            Need help? Contact support at support@example.com
+            Need help? Contact support at zay@gmail.com.com
         </div>
     </div>
     
