new  changes added can work

--- a/views/admin/categoryDelete.ejs
+++ b/views/admin/categoryDelete.ejs
@@ -42,6 +42,21 @@
                 <% } %>
             </tbody>
         </table>
+        <div class="pagination">
+            <% if (currentPage > 1) { %>
+                <a href="?page=<%= currentPage - 1 %>">Previous</a>
+            <% } %>
+        
+            <% for (let i = 1; i <= totalPages; i++) { %>
+                <a href="?page=<%= i %>" class="<%= i === currentPage ? 'active' : '' %>"><%= i %></a>
+            <% } %>
+        
+            <% if (currentPage < totalPages) { %>
+                <a href="?page=<%= currentPage + 1 %>">Next</a>
+            <% } %>
+        </div>
+        
+        
     </div>
     
 
