--- a/views/admin/categoryManagement.ejs
+++ b/views/admin/categoryManagement.ejs
@@ -89,11 +89,11 @@
         
         <div class="d-flex justify-content-center align-items-center mt-3">
             <div class="pagination-container text-center">
-                <span class="me-2" style="color:white;">Page <%= currentPage %> of <%= totalPages %></span>
+                <span class="me-2" style="color:rgb(0, 0, 0);">Page <%= currentPage %> of <%= totalPages %></span>
                 <nav aria-label="Page navigation">
                     <ul class="pagination pagination-sm justify-content-center">
                         
-                        <!-- Previous Button -->
+                    
                         <% if (currentPage > 1) { %>
                             <li class="page-item">
                                 <a class="page-link" href="?page=<%= currentPage - 1 %>" aria-label="Previous">
@@ -106,14 +106,14 @@
                             </li>
                         <% } %>
         
-                        <!-- Page Numbers -->
+              
                         <% for (let i = 1; i <= totalPages; i++) { %>
                             <li class="page-item <%= i === currentPage ? 'active' : '' %>">
                                 <a class="page-link" href="?page=<%= i %>"><%= i %></a>
                             </li>
                         <% } %>
         
-                        <!-- Next Button -->
+                      
                         <% if (currentPage < totalPages) { %>
                             <li class="page-item">
                                 <a class="page-link" href="?page=<%= currentPage + 1 %>" aria-label="Next">
